--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     --> 
-  <title>BullSmart</title>
+  <title>Bullsmart</title>
   <script>
     var swiper = new Swiper(".mySwiper", {
       slidesPerView: 1,
