--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="~/lib/Font-Awesome/css/fontawesome.min.css">
 <link rel="stylesheet" href="~/lib/Font-Awesome/css/regular.min.css">
 <link rel="stylesheet" href="~/lib/Font-Awesome/css/solid.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
   <!-- annimation link -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
